--- a/HAIL/HAIL.vcxproj.filters
+++ b/HAIL/HAIL.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="PursuitBehavior.h">
       <Filter>Steering</Filter>
     </ClInclude>
+    <ClInclude Include="EvadeBehavior.h">
+      <Filter>Steering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Graph">
@@ -87,6 +90,9 @@
       <Filter>Steering</Filter>
     </ClCompile>
     <ClCompile Include="PursuitBehavior.cpp">
+      <Filter>Steering</Filter>
+    </ClCompile>
+    <ClCompile Include="EvadeBehavior.cpp">
       <Filter>Steering</Filter>
     </ClCompile>
   </ItemGroup>
