--- a/HAIL/HAIL.vcxproj.filters
+++ b/HAIL/HAIL.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClInclude Include="HideBehavior.h">
       <Filter>Steering</Filter>
     </ClInclude>
+    <ClInclude Include="PathFollowingBehavior.h">
+      <Filter>Steering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Graph">
@@ -113,6 +116,9 @@
     </ClCompile>
     <ClCompile Include="AIWorld.cpp" />
     <ClCompile Include="HideBehavior.cpp">
+      <Filter>Steering</Filter>
+    </ClCompile>
+    <ClCompile Include="PathFollowingBehavior.cpp">
       <Filter>Steering</Filter>
     </ClCompile>
   </ItemGroup>
