--- a/HAIL/HAIL.vcxproj.filters
+++ b/HAIL/HAIL.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClInclude Include="PathFollowingBehavior.h">
       <Filter>Steering</Filter>
     </ClInclude>
+    <ClInclude Include="ObstacleAvoidanceBehavior.h">
+      <Filter>Steering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Graph">
@@ -119,6 +122,9 @@
       <Filter>Steering</Filter>
     </ClCompile>
     <ClCompile Include="PathFollowingBehavior.cpp">
+      <Filter>Steering</Filter>
+    </ClCompile>
+    <ClCompile Include="ObstacleAvoidanceBehavior.cpp">
       <Filter>Steering</Filter>
     </ClCompile>
   </ItemGroup>
