--- a/FSMTest/FSMTest.vcxproj
+++ b/FSMTest/FSMTest.vcxproj
@@ -10,77 +10,20 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Agent.h" />
-    <ClInclude Include="AIWorld.h" />
-    <ClInclude Include="AlignmentBehavior.h" />
-    <ClInclude Include="ArriveBehavior.h" />
-    <ClInclude Include="AStarSearch.h" />
-    <ClInclude Include="BreadthFirstSearch.h" />
-    <ClInclude Include="CohesionBehavior.h" />
-    <ClInclude Include="DepthFirstSearch.h" />
-    <ClInclude Include="DijkstraSearch.h" />
-    <ClInclude Include="EvadeBehavior.h" />
-    <ClInclude Include="FleeBehavior.h" />
-    <ClInclude Include="Graph.h" />
-    <ClInclude Include="GraphSearch.h" />
-    <ClInclude Include="HAIL.h" />
-    <ClInclude Include="HideBehavior.h" />
-    <ClInclude Include="InterposeBehavior.h" />
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="ObstacleAvoidanceBehavior.h" />
-    <ClInclude Include="PathFollowingBehavior.h" />
-    <ClInclude Include="PursuitBehavior.h" />
-    <ClInclude Include="SeekBehavior.h" />
-    <ClInclude Include="SeparationBehavior.h" />
-    <ClInclude Include="State.h" />
-    <ClInclude Include="StateMachine.h" />
-    <ClInclude Include="SteeringBehavior.h" />
-    <ClInclude Include="SteeringModule.h" />
-    <ClInclude Include="WanderBehavior.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Agent.cpp" />
-    <ClCompile Include="AIWorld.cpp" />
-    <ClCompile Include="AlignmentBehavior.cpp" />
-    <ClCompile Include="ArriveBehavior.cpp" />
-    <ClCompile Include="AStarSearch.cpp" />
-    <ClCompile Include="BreadthFirstSearch.cpp" />
-    <ClCompile Include="CohesionBehavior.cpp" />
-    <ClCompile Include="DepthFirstSearch.cpp" />
-    <ClCompile Include="DijkstraSearch.cpp" />
-    <ClCompile Include="EvadeBehavior.cpp" />
-    <ClCompile Include="FleeBehavior.cpp" />
-    <ClCompile Include="Graph.cpp" />
-    <ClCompile Include="GraphSearch.cpp" />
-    <ClCompile Include="HideBehavior.cpp" />
-    <ClCompile Include="InterposeBehavior.cpp" />
-    <ClCompile Include="ObstacleAvoidanceBehavior.cpp" />
-    <ClCompile Include="PathFollowingBehavior.cpp" />
-    <ClCompile Include="PursuitBehavior.cpp" />
-    <ClCompile Include="SeekBehavior.cpp" />
-    <ClCompile Include="SeparationBehavior.cpp" />
-    <ClCompile Include="SteeringBehavior.cpp" />
-    <ClCompile Include="SteeringModule.cpp" />
-    <ClCompile Include="WanderBehavior.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="StateMachine.inl" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{718D194A-D9AD-40A5-976E-9DA416711085}</ProjectGuid>
+    <ProjectGuid>{A2464D4E-07CA-42C3-9FEA-41D0981046AE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>HAIL</RootNamespace>
+    <RootNamespace>FSMTest</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -96,15 +39,24 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../SGE</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../SGE;../HAIL</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -119,8 +71,8 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../SGE</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../SGE;../HAIL</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -129,6 +81,29 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="Mario.cpp" />
+    <ClCompile Include="MarioStates.cpp" />
+    <ClCompile Include="Mushroom.cpp" />
+    <ClCompile Include="WinMain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sge.ini" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HAIL\HAIL.vcxproj">
+      <Project>{718d194a-d9ad-40a5-976e-9da416711085}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\SGE\SGE.vcxproj">
+      <Project>{34282bbf-80bd-40a9-8b00-4b6955b5d24a}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MarioStates.h" />
+    <ClInclude Include="Mario.h" />
+    <ClInclude Include="MarioFactory.h" />
+    <ClInclude Include="Mushroom.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
